--- a/random_color.html
+++ b/random_color.html
@@ -10,21 +10,31 @@
 </head>
 
 <body>
-    <div id="container">
-        <div class="div" id="div1">
-            218
-        </div>
-        <div class="div" id="div2">
-            69
-        </div>
-        <div class="div" id="div3">
-            13
+    <nav>
+        <h1> RGB </h1>
+    </nav>
+    <div class="motherDiv">
+
+        <div class="circle" id="cirR">
+
+            <div class="circle" id="cirG">
+                <div class="circle" id="gR">
+                </div>
+            </div>
+
+            <div class="circle" id="cirB">
+                <div class="circle" id="bR">
+                </div>
+                <div class="circle" id="bG">
+                    <div class="circle" id="bgr">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div id="cont2">
-        <button>Change Color</button>
-        <h1>rgb(218,69,13)</h1>
-    </div>
+
+    <button class="btn">change color</button>
+
 
     <script src="random_color.js"></script>
 </body>
